# Vellum

./: .env.dev  .env.example  .env.template  .gitignore  .pylintrc  .vercelignore  ARCHITECTURE.md  AUTH_STRATEGY.md  CI_CD_FIXES_APPLIED.md  CODE_REVIEW_SUMMARY.md  DETAILED_CODE_REVIEW.md  DEVELOPMENT.md  NEXT_STEPS_IMPLEMENTATION.md  PERFORMANCE_ANALYSIS_REPORT.md  PERFORMANCE_IMPROVEMENTS_SUMMARY.md  ProductDoc.py  RAG_MVP_ARCHITECTURE.md  RAG_MVP_INGESTION_PLAN.md  RAG_MVP_METADATA_CONTRACT.md  README-DEVELOPMENT.md  README.md  RUN_MODES.md  WORKFLOW_CONFIGURATION_README.md  WORKFLOW_FIX.md  docker-compose.dev.yml  docker-compose.minimal.yml  docker-compose.prod.yml  docker-compose.yml  ingest.py  package-lock.json  package.json  rag_service.py  retrieve.py  start-dev.sh  test_custodian_langgraph.py  test_custodian_simple.py  test_implementation.py  test_rules_system.py  test_utils.py  test_workflow_system.py  (+1 more)
backend/: .pre-commit-config.yaml  DEPENDENCIES.md  Dockerfile  Makefile  README.md  alembic.ini  bandit.yaml  pyproject.toml  pytest.ini  requirements-ai.txt  requirements-banking.txt  requirements-core.txt  requirements-dev.txt  requirements-infrastructure.txt  requirements-minimal.txt  requirements-observability.txt  requirements.simple.txt  requirements.txt  simple_drools_test.py  simple_main.py  simple_requirements.txt  simple_sop_test.py  simple_workflow_test.py  test_custodian_data_chain.py  test_drools_integration.py  test_sop_system.py  test_workflow_execution.py
backend/app/: main.py  main_simple.py  schemas.py
backend/app/ai/: README.md
backend/app/ai/langgraph_workflows/: README.md  __init__.py  rules_orchestration.py
backend/app/api/: router.py
backend/app/api/endpoints/: auth_unified.py  custodian_data.py  custodian_langgraph.py  data_sandbox.py  data_sources.py  data_streams.py  data_workflows.py  fibo.py  knowledge_graph.py  mcp_servers.py  monitoring.py  procedure_documents.py  rag.py  rag_findings.py  rules.py  sop_management.py  workflow_execution.py  workflows.py
backend/app/api/v1/endpoints/: documentation.py
backend/app/core/: auth.py  auth_config.py  azure_config.py  config.py  config_validator.py  database.py  error_handling.py  error_handling_enhanced.py  middleware.py  performance.py  placeholder_auth.py  security.py  telemetry.py  validation.py
backend/app/db/: seeds.py
backend/app/flows/: rules_engine_node.py
backend/app/integrations/: README.md  __init__.py  bootstrap.py
backend/app/integrations/base/: __init__.py  auth.py  client.py  exceptions.py  pagination.py  provider.py  registry.py  tooling.py
backend/app/integrations/contracts/: README.md  __init__.py  models.py  registry.py  result.py  status.py
backend/app/integrations/domain/: custody.py  fund_accounting.py  oms.py  reference_data.py
backend/app/integrations/integrations/base/: models.py
backend/app/integrations/integrations/contracts/: loader.py
backend/app/integrations/integrations/domain/: __init__.py
backend/app/integrations/providers/: __init__.py
backend/app/integrations/providers/state_street/: README.md  __init__.py  auth.py  client.py  config.py  field_mapping_notes.md  mapping.py  provider.py  tools.py
backend/app/integrations/registry/: __init__.py  providers.py  sources.py  status.py  tools.py
backend/app/models/: data_sandbox.py  data_source.py  documentation.py  fibo_ontology.py  knowledge_graph.py  procedure_document_row.py  rag.py  sop.py  trade.py  user.py  workflow.py
backend/app/rag/: README.md  __init__.py  ingest.py  rag_service.py  retrieve.py
backend/app/rules/: engine.py  loader.py  models.py  registry.py
backend/app/rules/rules/: README.md  __init__.py  jsonlogic.py
backend/app/schemas/: __init__.py  common.py  documentation.py  procedure_document.py  rag.py
backend/app/services/: auth_factory.py  auth_service.py  banking_stub_services.py  base.py  custodian_data_chain.py  custodian_langgraph_service.py  data_sandbox_service.py  data_sandbox_service_optimized.py  data_source_service.py  documentation_service.py  drools_service.py  embedding_service.py  factory.py  fibo_service.py  interfaces.py  kafka_service.py  knowledge_graph_sync_service.py  langchain_data_workflow_service.py  langchain_service.py  langgraph_service.py  llm_service.py  mcp_service.py  neo4j_service.py  procedure_document_service.py  rag_pipeline_service.py  sop_service.py  temporal_service.py  websocket_service.py  workflow_execution_service.py
backend/app/services/custodian_apis/: __init__.py  state_street.py
backend/app/tools/: docker_python_repl.py  vellum_doc_tool.py
backend/app/utils/: exceptions.py
backend/flows/: __init__.py  canonical_probe.py
backend/migrations/: env.py
backend/migrations/versions/: 001_20241127_1400_initial_banking_schema.py  002_rag_documents_and_chunks.py  003_nav_rag_schema.py
backend/otomeshon/core/: cells.py  document.py
backend/scripts/: db_setup.sh  ingest_rag_manifest.py  migration_utils.py  run_tests.py  security_scan.py  seed_database.py  seed_graph.py  seed_knowledge_graph.py  validate_config.py
backend/tests/: TESTING_STRATEGY.md  conftest.py  test_api_endpoints.py  test_banking_operations.py  test_basic.py  test_cells_roundtrip.py  test_langgraph_rules_workflow.py  test_main_simple.py  test_performance_optimizations.py  test_rag_pipeline_dependency.py  test_real_backend_contract.py  test_rules_engine.py  test_security.py
backend/tests/fixtures/rules/: cash_activity_value_date_breach_not_trigger.json  cash_activity_value_date_breach_trigger.json  position_quantity_tolerance_breach_not_trigger.json  position_quantity_tolerance_breach_trigger.json
contracts/: README.md
docs/: ADR-001-canonical-platform-stack.md  API_REFERENCE.md  ARCHITECTURE.md  CUSTODIAN_DATA_CHAIN.md  CUSTODIAN_LANGGRAPH.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  DEVELOPER_ONBOARDING.md  FRONTEND-MIGRATION-VITE.md  FRONTEND_GUIDE.md  MONITORING.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  PREFECT-CLOUD-WORK-POOLS.md  PRODUCTION_DEPLOYMENT.md  SECURITY.md  SECURITY_CHECKLIST.md  TROUBLESHOOTING.md
frontend/: .env.example  (+15 more)
(+203 files in other folders)
