[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "otomeshon-banking"
version = "1.0.0"
description = "Otomeshon Banking Operations Automation Platform"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Proprietary"}
authors = [
    {name = "Otomeshon Development Team", email = "dev@otomeshon.com"}
]
keywords = ["banking", "automation", "compliance", "fintech"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy[asyncio]>=2.0.23",
    "alembic>=1.12.1",
    "asyncpg>=0.29.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "httpx>=0.25.2",
    "structlog>=23.2.0",
    "prometheus-client>=0.19.0",
    "psutil>=5.9.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
    "bandit>=1.7.5",
    "pre-commit>=3.6.0",
    "autoflake>=2.2.1",
    "pylint>=3.0.3",
    "pytest-mock>=3.12.0",
    "factory-boy>=3.3.0",
    "faker>=20.1.0",
]

banking = [
    "pandas>=2.1.3",
    "numpy>=1.25.2",
    "scipy>=1.11.4",
    "python-dateutil>=2.8.2",
    "pytz>=2023.3",
    "openpyxl>=3.1.2",
    "xlsxwriter>=3.1.9",
]

ai = [
    "openai>=1.3.7",
    "langchain>=0.0.340",
    "langchain-openai>=0.0.2",
    "tiktoken>=0.5.2",
    "sentence-transformers>=2.2.2",
    "chromadb>=0.4.18",
    "pgvector>=0.2.4",
]

infrastructure = [
    "redis>=5.0.1",
    "celery[redis]>=5.3.4",
    "docker>=6.1.3",
    "kubernetes>=28.1.0",
    "boto3>=1.34.0",
    "azure-storage-blob>=12.19.0",
]

observability = [
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-instrumentation-fastapi>=0.42b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.42b0",
    "opentelemetry-exporter-prometheus>=1.12.0rc1",
    "sentry-sdk[fastapi]>=1.38.0",
]

[project.urls]
Homepage = "https://github.com/otomeshon/banking-platform"
Documentation = "https://docs.otomeshon.com"
Repository = "https://github.com/otomeshon/banking-platform.git"
"Bug Tracker" = "https://github.com/otomeshon/banking-platform/issues"

[project.scripts]
otomeshon-server = "app.main:main"
otomeshon-migrate = "scripts.migration_utils:main"
otomeshon-seed = "scripts.seed_database:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "scripts*"]
exclude = ["tests*", "migrations*"]

# Black code formatting
[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

# isort import sorting
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["app", "scripts"]
known_third_party = ["fastapi", "sqlalchemy", "pydantic", "alembic"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# Flake8 linting
[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503", "E501"]
exclude = [
    ".git",
    "__pycache__",
    "migrations",
    "venv",
    ".venv",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
]
per-file-ignores = [
    "__init__.py:F401",  # Allow unused imports in __init__.py
    "app/models/*.py:E501",  # Allow long lines in models
]

# MyPy type checking
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradually enable
disallow_incomplete_defs = false  # Gradually enable
check_untyped_defs = true
disallow_untyped_decorators = false  # Gradually enable
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
ignore_missing_imports = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "uvicorn.*",
    "prometheus_client.*",
    "psutil.*",
    "neo4j.*",
    "kafka.*",
    "temporal.*",
    "drools.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
    "--cov-fail-under=80",
]
markers = [
    "unit: marks tests as unit tests (fast)",
    "integration: marks tests as integration tests (slower)",
    "banking: marks tests as banking-specific tests",
    "security: marks tests as security tests",
    "performance: marks tests as performance tests",
    "compliance: marks tests as compliance tests",
    "slow: marks tests as slow running",
    "requires_db: marks tests that require database",
    "requires_external: marks tests that require external services",
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# Coverage configuration
[tool.coverage.run]
source = ["app"]
omit = [
    "app/tests/*",
    "app/migrations/*",
    "*/venv/*",
    "*/.venv/*",
    "*/test_*.py",
    "*/*_test.py",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

# Pylint configuration
[tool.pylint.main]
load-plugins = [
    "pylint.extensions.check_elif",
    "pylint.extensions.bad_builtin",
    "pylint.extensions.docparams",
    "pylint.extensions.for_any_all",
    "pylint.extensions.set_membership",
    "pylint.extensions.code_style",
    "pylint.extensions.overlapping_exceptions",
    "pylint.extensions.typing",
    "pylint.extensions.redefined_variable_type",
    "pylint.extensions.comparison_placement",
]

[tool.pylint.messages_control]
confidence = ["HIGH", "CONTROL_FLOW", "INFERENCE", "INFERENCE_FAILURE", "UNDEFINED"]
disable = [
    "missing-module-docstring",
    "missing-class-docstring", 
    "missing-function-docstring",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-instance-attributes",
    "line-too-long",
    "fixme",
    "duplicate-code",
]

[tool.pylint.format]
max-line-length = 88

[tool.pylint.design]
max-args = 8
max-attributes = 15
max-bool-expr = 5
max-branches = 15
max-locals = 20
max-parents = 7
max-public-methods = 25
max-returns = 8
max-statements = 50

[tool.pylint.typing]
runtime-typing = false

# Banking-specific configuration
[tool.banking]
compliance_level = "enterprise"
audit_retention_years = 7
encryption_required = true
pii_detection_enabled = true
regulatory_frameworks = ["SOX", "PCI-DSS", "GDPR", "CCPA"]

[tool.banking.security]
password_policy = "strict"
session_timeout_minutes = 30
multi_factor_auth_required = true
ip_allowlist_enabled = false
rate_limiting_enabled = true

[tool.banking.monitoring]
performance_tracking = true
error_tracking = true
audit_logging = true
metrics_collection = true
alerting_enabled = true

# Development environment
[tool.development]
debug_mode = false
auto_reload = true
log_level = "INFO"
enable_profiling = false
